Add verification scripts and models for Powder ORM
- Introduced Power Node verification script (run.ps1) for JS/TS queries.
- Added TypeScript configuration (tsconfig.json) for compiling tests.
- Created a schema definition (powder.schema.json) for the database structure.
- Generated Python models (powder_models.py) for ORM representation of database tables.
- Implemented a Python verification script (realworld_queries.py) for testing queries against the database.
- Added a PowerShell script (run.ps1) for executing the Python verification suite.
- Developed a matrix runner (run_matrix.ps1) to validate across multiple languages and backends.